# Stratum-gc

./: .gitignore  CMakeLists.txt  qgcimages.qrc  qgcresources.qrc
.cpm_cache/ardupilotparams/: 99f3.hash
.cpm_cache/geographiclib/: 3ddb.hash  e033.hash
.cpm_cache/libarchive/: bce4.hash
.cpm_cache/libevents/: 1ea2.hash
.cpm_cache/libexif/: 7cb7.hash
.cpm_cache/mavlink/: fa55.hash
.cpm_cache/px4-gpsdrivers/: d6d7.hash
.cpm_cache/sdl3/: f597.hash
.cpm_cache/sdl_gamecontrollerdb/: df26.hash
.cpm_cache/shapelib/: d764.hash
.cpm_cache/ulog_cpp/: ca6d.hash
.cpm_cache/xz/: f76b.hash
.cpm_cache/zlib/: 20e6.hash
.cpm_cache/zstd/: dfd2.hash
.github/workflows/: check-links.yml  linux.yml
.qt/rcc/: qmake_QGC.qrc
build-release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake  org.mavlink.qgroundcontrol.appdata.xml  org.mavlink.qgroundcontrol.desktop  qgroundcontrol_qmltyperegistrations.cpp
build-release/.lupdate/: QGroundControl_lupdate_project.cmake
build-release/.qt/: .qmlls.build.ini  QGroundControl_qml.cmake  QGroundControl_res.cmake  QtDeploySupport.cmake  QtDeployTargets.cmake  deploy_qml_app_QGroundControl_525631ba92.cmake
build-release/.qt/deploy_qml_imports/: QGroundControl.cmake
build-release/.qt/qml_imports/: QGroundControl_build.rsp  QGroundControl_conf.cmake  QGroundControl_conf.rsp
build-release/.qt/rcc/: QGroundControl_translations.qrc  qgcresources_cmake.qrc  qmake_QGC.qrc
build-release/.rcc/qmlcache/: all_aotstats.aotstatslist  aotstats_empty_modules.txt
build-release/.rcc/qmllint/: QGroundControl.rsp  QGroundControl_json.rsp  QGroundControl_module.rsp
build-release/QGroundControl_autogen/: deps  mocs_compilation.cpp
build-release/Release/: AppRun  default.desktop
build-release/Release/qml/QtCharts/: qtchartsqml2plugin.debug
build-release/Release/qml/QtCore/: qtqmlcoreplugin.debug
build-release/Release/qml/QtLocation/: declarative_locationplugin.debug
build-release/Release/qml/QtMultimedia/: quickmultimediaplugin.debug
build-release/custom/: cmake_install.cmake
build-release/meta_types/: QGroundControl_json_file_list.txt  QGroundControl_json_file_list.txt.timestamp  qt6qgroundcontrol_metatypes.json.gen
build-release/qml/QGC/: QGroundControl.qmltypes  QGroundControl_qml_module_dir_map.qrc  qmldir
build-release/qml/QGroundControl/: QGroundControlModule_qml_module_dir_map.qrc  qmldir
build-release/qmltypes/: QGroundControl_foreign_types.txt
build-release/src/: cmake_install.cmake  qgroundcontrolmodule_qmltyperegistrations.cpp
build-release/src/.qt/: QGroundControlModule_qml.cmake  QGroundControlModule_res.cmake
build-release/src/ADSB/: cmake_install.cmake
build-release/src/API/: cmake_install.cmake
build-release/src/AnalyzeView/: analyzeviewmodule_qmltyperegistrations.cpp  cmake_install.cmake
build-release/src/Android/: cmake_install.cmake
build-release/src/AutoPilotPlugins/: cmake_install.cmake
build-release/src/Camera/: cmake_install.cmake
build-release/src/Comms/: cmake_install.cmake
build-release/src/FactSystem/: cmake_install.cmake
build-release/src/FirmwarePlugin/: cmake_install.cmake
build-release/src/FlightMap/: cmake_install.cmake  flightmapmodule_qmltyperegistrations.cpp
build-release/src/FlyView/: cmake_install.cmake  flyviewmodule_qmltyperegistrations.cpp
build-release/src/FollowMe/: cmake_install.cmake
build-release/src/GPS/: cmake_install.cmake
build-release/src/Gimbal/: cmake_install.cmake
build-release/src/Joystick/: cmake_install.cmake
build-release/src/MAVLink/: cmake_install.cmake
build-release/src/MissionManager/: cmake_install.cmake
build-release/src/PositionManager/: cmake_install.cmake
build-release/src/QGroundControlModule_autogen/: deps
build-release/src/QmlControls/: cmake_install.cmake  qgroundcontrolcontrolsmodule_qmltyperegistrations.cpp
build-release/src/QtLocationPlugin/: cmake_install.cmake
build-release/src/Settings/: cmake_install.cmake
build-release/src/Terrain/: cmake_install.cmake
build-release/src/UI/: cmake_install.cmake
build-release/src/UTMSP/: cmake_install.cmake  utmspmodule_qmltyperegistrations.cpp
build-release/src/Utilities/: cmake_install.cmake
build-release/src/Vehicle/: cmake_install.cmake
build-release/src/VideoManager/: cmake_install.cmake
build-release/src/Viewer3D/: cmake_install.cmake  viewer3dmodule_qmltyperegistrations.cpp
custom/: CMakeLists.txt
custom/cmake/: CustomOverrides.cmake
qml/QGC/: QGroundControl_qml_module_dir_map.qrc
qml/QGroundControl/: QGroundControlModule_qml_module_dir_map.qrc
qml/QGroundControl/AnalyzeView/: AnalyzeViewModule_qml_module_dir_map.qrc
qml/QGroundControl/FactControls/: FactControlsModule_qml_module_dir_map.qrc
qml/QGroundControl/FlightMap/: FlightMapModule_qml_module_dir_map.qrc
qml/QGroundControl/FlyView/: FlyViewModule_qml_module_dir_map.qrc  FlyViewRightToolStrip.qml  FlyViewRightToolStripActionList.qml  FlyViewWidgetLayer.qml  qmldir
src/: CMakeLists.txt  QGCApplication.cc
src/.qt/rcc/: QGroundControlModule_raw_qml_0.qrc  qmake_QGroundControl.qrc
src/API/: QGCCorePlugin.cc
src/Comms/: MAVLinkProtocol.cc
src/FirmwarePlugin/: FirmwarePlugin.cc  FirmwarePlugin.h
src/FirmwarePlugin/PX4/: PX4FirmwarePlugin.cc  PX4FirmwarePlugin.h
src/Fleet/: CMakeLists.txt  EnrolledVehicle.cpp  EnrolledVehicle.h  FleetConfigLoader.cpp  FleetConfigLoader.h  FleetRegistry.cpp  FleetRegistry.h  fleet.json
src/FlyView/: CMakeLists.txt  FlyView(1).qml  FlyView.qml  FlyViewMap(1).qml  FlyViewWidgetLayer.qml
src/QmlControls/: FlyViewToolBar.qml  MainStatusIndicator.qml  MainStatusIndicator.qml.FINAL_BACKUP  MainStatusIndicator.qml.backup  QGCPalette.cc  QGCPalette.cc.BACKUP
src/Settings/: VideoSettings.cc
src/UI/: MainWindow.qml  MainWindow.qml.BACKUP  MainWindow.qml.FINAL_BACKUP  MainWindow.qml.backup
src/Vehicle/: Vehicle.cc  Vehicle.h
src/VideoManager/: VideoManager.cc
src/VideoManager/VideoReceiver/GStreamer/: CMakeLists.txt
src/VideoManager/VideoReceiver/GStreamer/gstqml6gl/: CMakeLists.txt
(+1271 files in other folders)
